--- a/requirements.txt
+++ b/requirements.txt
@@ -95,4 +95,6 @@ django-markup==0.3
 # django-haystack==1.0.2-final
 # Whoosh==0.3.18
 # Whoosh==1.1.1
-Whoosh==1.3.1
+# Whoosh==1.3.1
+pysolr==2.0.13
+
