--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ supervisor==3.0a9
 twill==0.9
 wsgiref==0.1.2
 
+# used across apps
+django-pagination==1.0.7
 django-sentry==1.3.13
 django-paging==0.2.2
 django-indexer==0.2
@@ -54,7 +56,8 @@ django-uni-form==0.7.0
 
 -e git+http://github.com/gldnspud/python-postmark.git@b8f4d8f717d71607d84f70dde544c36e392225f6#egg=python-postmark
 
--e git+http://github.com/snswa/django-wakawaka.git@3e7760156c055026a8855d90170be3e233c81ce7#egg=django-wakawaka
+# Wakawaka
+-e git+http://github.com/snswa/django-wakawaka.git@d795781b3e5c9d0d685ebae45dcd0f7091841854#egg=django-wakawaka
 django-markup==0.3
 
 -e git+http://github.com/snswa/django-voice.git@303d54b2c1ef23c27a349ad1acd8b6e04a3c02bb#egg=django-voice
