Bring teams redux back into the mix.

--- a/requirements.txt
+++ b/requirements.txt
@@ -81,3 +81,6 @@ pysolr==2.0.13
 
 # Idios
 -e git+http://github.com/snswa/idios.git@a7bff188b53388b47a204a7992d9a23907ae714a#egg=idios
+
+# Teams
+-e git+http://github.com/snswa/django-teams.git@9b853cf275162ae712a99529af9a53623ad92c76#egg=django-teams
