--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ django-uni-form==0.7.0
 -e git+http://github.com/gldnspud/python-postmark.git@b8f4d8f717d71607d84f70dde544c36e392225f6#egg=python-postmark
 
 # Wakawaka
--e git+http://github.com/snswa/django-wakawaka.git@d795781b3e5c9d0d685ebae45dcd0f7091841854#egg=django-wakawaka
+-e git+http://github.com/snswa/django-wakawaka.git@ab4b4dc#egg=django-wakawaka
 django-markup==0.3
 
 # Voice
@@ -83,4 +83,5 @@ pysolr==2.0.13
 -e git+http://github.com/snswa/idios.git@a7bff188b53388b47a204a7992d9a23907ae714a#egg=idios
 
 # Teams
--e git+http://github.com/snswa/django-teams.git@bee809ba20f8e0fbb96c6d741d0df8221964092a#egg=django-teams
+-e git+http://github.com/snswa/django-teams.git@5bb0d0a#egg=django-teams
+-e git+http://github.com/snswa/django-groups.git@c028e7d#egg=django-groups
