--- a/requirements.txt
+++ b/requirements.txt
@@ -83,8 +83,9 @@ pysolr==2.0.13
 -e git+http://github.com/snswa/idios.git@a7bff188b53388b47a204a7992d9a23907ae714a#egg=idios
 
 # Teams
--e git+http://github.com/snswa/django-teams.git@d23bd8f#egg=django-teams
+-e git+http://github.com/snswa/django-teams.git@c862b87#egg=django-teams
 -e git+http://github.com/snswa/django-groups.git@c028e7d#egg=django-groups
+-e git+http://github.com/snswa/django-inline-ordering.git@5259435#egg=django-inline-ordering
 
 # Activity stream
 -e git+http://github.com/snswa/django-activity-stream.git@2f2b210#egg=django-activity-stream
