--- a/requirements.txt
+++ b/requirements.txt
@@ -94,3 +94,6 @@ django-attachments==0.3.1
 
 # Voting
 -e git+http://github.com/snswa/django-voting.git@5dcc830#egg=django-voting
+
+# Feature Flipper
+-e git+http://github.com/snswa/django-feature-flipper.git@831ca1a#egg=django-feature-flipper
