--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ django-indexer==0.2
 django-templatetag-sugar==0.1
 
 # Django-CMS
--e git+http://github.com/snswa/django-cms.git@2.1.0.rc1#egg=django-cms
+-e git+http://github.com/snswa/django-cms.git@c7fc3d1#egg=django-cms
 django-reversion==1.3.2
 PIL==1.1.7
 
