--- a/requirements.txt
+++ b/requirements.txt
@@ -102,3 +102,6 @@ feedparser==4.1
 
 # Friends
 -e git+https://github.com/snswa/django-relationships.git@d29a0ba#egg=django-relationships
+
+# Calendar
+-e git+https://github.com/snswa/dregni.git@3a8618d#egg=dregni
