--- a/requirements.txt
+++ b/requirements.txt
@@ -84,7 +84,7 @@ pysolr==2.0.13
 -e git+https://github.com/snswa/django-activity-stream.git@9b86958#egg=django-activity-stream
 
 # File attachments
-django-attachments==0.3.1
+-e git+https://github.com/snswa/django-attachments.git@e489452#egg=django-attachments
 
 # Voting
 -e git+https://github.com/snswa/django-voting.git@5dcc830#egg=django-voting
@@ -109,3 +109,8 @@ vobject==0.8.1c
 
 # iris
 -e git+https://github.com/snswa/django-iris.git@28f3d20#egg=django-iris
+
+# aws
+boto==1.9b
+s3vcp==0.2.1
+-e hg+https://bitbucket.org/david/django-storages/@def732408163#egg=django-storages
