--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ django-piston==0.2.2
 django-profiles==0.2
 django-registration==0.7
 django-staticfiles==0.3.2
+django-tagging==0.3.1
+django-taggit==0.9.2
 django-unittest-depth==0.6
 gunicorn>=0.11,<0.12
 importlib==1.0.2
